Add authentication, signup, login, logout

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://localhost:5432/withdrawal-system_development?pool=5
+DATABASE_URL=postgresql://bim:bbim@localhost:5432/withdrawal-system_development?pool=5
