--- a/test/fixtures/balance_adjustments.yml
+++ b/test/fixtures/balance_adjustments.yml
@@ -1,17 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  coin_id: 1
-  user_id: 
-  change_type: MyString
-  change_id: 1
-  memo: MyString
-  amount: 9.99
-
-two:
-  coin_id: 1
-  user_id: 
-  change_type: MyString
-  change_id: 1
-  memo: MyString
-  amount: 9.99
+love_for_alice_from_bob:
+  coin: lovetoken
+  user: alice
+  change: bob (User)
+  memo: I love you
+  amount: 100
