--- a/test/fixtures/balance_adjustments.yml
+++ b/test/fixtures/balance_adjustments.yml
@@ -1,8 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-love_for_alice_from_bob:
-  coin: lovetoken
+eth_for_alice_from_bob:
+  coin: eth
   user: alice
   change: bob (User)
-  memo: I love you
   amount: 100
