--- a/test/fixtures/balance_adjustments.yml
+++ b/test/fixtures/balance_adjustments.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 eth_for_alice_from_bob:
-  coin: eth
+  asset: eth
   user: alice
   change: bob (User)
   amount: 100
