--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.3.2",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "vue": "^2.5.17",
     "vue-loader": "14.2.2",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {
