--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vue": "^2.5.17",
     "vue-loader": "14.2.2",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
