remove balanceadjustment editing

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL=postgresql://localhost:5432/withdrawal-system_development?pool=5
+SMTP_SERVER=smtp.mailtrap.io
+SMTP_PORT=465
+SMTP_USER=cee18296dec751
+SMTP_PASSWORD=9ccbbab5d9973a
