--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://localhost:5432/withdrawal-system_development?pool=5
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/withdrawal-system_development?pool=5
 SMTP_SERVER=smtp.mailtrap.io
 SMTP_PORT=465
 SMTP_USER=cee18296dec751
