--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,13 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1-node
         environment:
-          PGHOST: 127.0.0.1
-          PGUSER: tokenstudio
           RAILS_ENV: test
+          DATABASE_URL: postgresql://circleci:circleci@127.0.0.1:5432/circleci
       - image: circleci/postgres:9.6.3-alpine
         environment:
-          POSTGRES_USER: tokenstudio
-          POSTGRES_DB: tokenstudio_test
-          POSTGRES_PASSWORD: ""
+          POSTGRES_USER: circleci
+          POSTGRES_DB: circleci
+          POSTGRES_PASSWORD: circleci
     steps:
       - checkout
 
