--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@rails/webpacker": "3.5",
+    "@rails/webpacker": "^4.0.0-pre.3",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "pug": "^2.0.3",
