--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
+    "vue-turbolinks": "^2.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
