--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "@rails/webpacker": "^4.0.0-pre.3",
+    "@rails/webpacker": "https://github.com/rails/webpacker",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "pug": "^2.0.3",
@@ -16,6 +16,6 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^3.1.10"
   }
 }
