--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "@rails/webpacker": "https://github.com/rails/webpacker",
+    "@rails/webpacker": "^4.0.0-pre.3",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
     "pug": "^2.0.3",
