Add localization for Japanese

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,11 @@ bower.json
 
 # Ignore hotwallet keys
 wallet.*
+
+# Ignore node_modules
+node_modules/
+
+# Ignore precompiled javascript packs
+/public/packs
+/public/packs-test
+/public/assets
